Copy-pasted tests into the publish workflow.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,17 @@ on:
     tags:
       - '*'
 jobs:
+  tests:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '5.0.x'
+    - name: Run Tests
+      run: dotnet test
+      shell: pwsh
   publish:
     name: Build and Publish
     runs-on: ubuntu-latest
