--- a/TestModule/TestModule.csproj
+++ b/TestModule/TestModule.csproj
@@ -7,6 +7,7 @@
     <Product>BlendoBot</Product>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageId>BlendoBot.TestModule</PackageId>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
