Added GitHub NuGet and updated test to new interface field.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,12 +27,14 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
+          source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{ github.token }}
 
       - name: Publish NuGet Package
         id: publish_nuget
-        uses: rohith/publish-nuget@v2
-        with:
-          PROJECT_FILE_PATH: TestModule/TestModule.csproj
-          VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-          NUGET_KEY: ${{secrets.NUGET_KEY}}
-          TAG_COMMIT: false
+        shell: pwsh
+        run: |
+          dotnet restore
+          dotnet pack --configuration Release
+          dotnet nuget push ((Get-ChildItem ".\bin\Release\*.nupkg")[0].FullName) --api-key "${{ github.token }}" --source "Source"
