--- a/NuGet.config
+++ b/NuGet.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="BlendoBot NuGet" value="https://nuget.pkg.github.com/BlendoBot/index.json" />
+    <add key="github.blendobot" value="https://nuget.pkg.github.com/BlendoBot/index.json" />
   </packageSources>
 </configuration>
